[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/PublicPixel-z84yD.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Menu.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprite-ddd0001.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 512.0
texture = ExtResource( 3 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 159.0
margin_top = -19.0
margin_right = 251.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 1 )
text = "START"
flat = true

[node name="OptionsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 126.0
margin_top = 64.0
margin_right = 250.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
text = "OPTIONS"
flat = true

[node name="CreditsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 116.0
margin_top = 91.0
margin_right = 256.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 1 )
text = "CREDITS"
flat = true

[node name="QuitButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 119.0
margin_top = 116.0
margin_right = 259.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 1 )
text = "QUIT"
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 51.0
margin_top = 17.0
margin_right = 561.0
margin_bottom = 172.0
custom_fonts/normal_font = SubResource( 2 )
text = "      THE DARK 
   SIDE OF THE 
          MOON"
scroll_active = false

[node name="Border" type="Sprite" parent="."]
position = Vector2( 256, 256 )
z_index = 66
texture = ExtResource( 4 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
